Fixed about me images and footer on mobile

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -73,4 +73,7 @@ p{
     .footer-container{
         grid-template-columns: 1fr; 
     }
+    .footer p {
+        font-size: 1rem;
+      }
 }
